# rgbd-slam-lets-do-it

./: .gitignore  README.md
1-hello_slam/: CMakeLists.txt
1-hello_slam/lib/: hello_slam
1-hello_slam/src/: CMakeLists.txt  main.cpp
2-generate_pointcloud/: CMakeLists.txt
2-generate_pointcloud/src/: CMakeLists.txt  generate_pointcloud.cpp
3-Feature_extraction_and_registration/: CMakeLists.txt
3-Feature_extraction_and_registration/include/: slam_base.h
3-Feature_extraction_and_registration/src/: CMakeLists.txt  detect_features.cpp  slam_base.cpp
4-transform_pointcloud/: CMakeLists.txt
4-transform_pointcloud/include/: slam_base.h
4-transform_pointcloud/src/: CMakeLists.txt  joint_pointcloud.cpp  slam_base.cpp
5-VO/: CMakeLists.txt  parameters.txt  坑lists.md
5-VO/include/: display.h  slam_base.h
5-VO/src/: CMakeLists.txt  slam_base.cpp  vo.cpp
6-g2o/: CMakeLists.txt  parameters.txt  result_after.g2o  result_before.g2o  坑lists.md
6-g2o/src/: CMakeLists.txt  g2o.cpp
7-loop_closing/: CMakeLists.txt  parameters.txt  result_after.g2o  result_before.g2o  坑lists.md
7-loop_closing/include/: slam_base.h
7-loop_closing/src/: CMakeLists.txt  display.cpp  slam.cpp  slam_base.cpp
8-octomap/: CMakeLists.txt  坑lists.md
8-octomap/data/: CameraTrajectory.txt  KeyFrameTrajectory.txt  color_octomap.ot  octomap.bt
8-octomap/src/: joint_octomap.cpp  pcd_to_color_octomap.cpp  pcd_to_octomap.cpp  pcl_from_pose.cpp
9-doxygen/doc/: Doxyfile
9-doxygen/doc/html/: _depth_map_8h_source.html  _depth_map_pixel_hypothesis_8h_source.html  _eigen_core_include_8h_source.html  _fab_map_8h_source.html  _frame_8h_source.html  _frame_memory_8h_source.html  _frame_pose_struct_8h_source.html  _image_display_8h_source.html  _index_thread_reduce_8h_source.html  _input_image_stream_8h_source.html  _key_frame_graph_8h_source.html  _l_g_s_x_8h_source.html  _live_s_l_a_m_wrapper_8h_source.html  _notify_buffer_8h_source.html  _output3_d_wrapper_8h_source.html  _r_o_s_image_stream_thread_8h_source.html  _r_o_s_output3_d_wrapper_8h_source.html  _relocalizer_8h_source.html  _s_e3_tracker_8h_source.html  _sim3_tracker_8h_source.html  _slam_system_8h_source.html  _sophus_util_8h_source.html  _timestamp_8h_source.html  _timestamped_object_8h_source.html  _trackable_key_frame_search_8h_source.html  _tracking_reference_8h_source.html  _undistorter_8h_source.html  annotated.html  classes.html  classlsd__slam_1_1_dense_depth_tracker_settings-members.html  classlsd__slam_1_1_dense_depth_tracker_settings.html  classlsd__slam_1_1_depth_map-members.html  classlsd__slam_1_1_depth_map.html  classlsd__slam_1_1_depth_map_pixel_hypothesis-members.html  classlsd__slam_1_1_depth_map_pixel_hypothesis.html  classlsd__slam_1_1_edge_sim3-members.html  classlsd__slam_1_1_edge_sim3.html  classlsd__slam_1_1_frame-members.html  classlsd__slam_1_1_frame.html  classlsd__slam_1_1_frame_memory-members.html  (+95 more)
9-doxygen/doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  (+15 more)
9-doxygen/doc/latex/: annotated.tex  classlsd__slam_1_1_dense_depth_tracker_settings.tex  classlsd__slam_1_1_depth_map.tex  classlsd__slam_1_1_depth_map_pixel_hypothesis.tex  classlsd__slam_1_1_edge_sim3.eps  classlsd__slam_1_1_edge_sim3.tex  classlsd__slam_1_1_frame.tex  classlsd__slam_1_1_frame_memory.tex  classlsd__slam_1_1_frame_pose_struct.tex  classlsd__slam_1_1_index_thread_reduce.tex  classlsd__slam_1_1_input_image_stream.eps  classlsd__slam_1_1_input_image_stream.tex  classlsd__slam_1_1_key_frame_graph.tex  classlsd__slam_1_1_l_g_s4.tex  classlsd__slam_1_1_l_g_s6.tex  classlsd__slam_1_1_l_g_s7.tex  classlsd__slam_1_1_notifiable.eps  classlsd__slam_1_1_notifiable.tex  classlsd__slam_1_1_notify_buffer.tex  classlsd__slam_1_1_output3_d_wrapper.eps  classlsd__slam_1_1_output3_d_wrapper.tex  classlsd__slam_1_1_r_o_s_image_stream_thread.eps  classlsd__slam_1_1_r_o_s_image_stream_thread.tex  classlsd__slam_1_1_r_o_s_output3_d_wrapper.eps  classlsd__slam_1_1_r_o_s_output3_d_wrapper.tex  classlsd__slam_1_1_relocalizer.tex  classlsd__slam_1_1_running_stats.tex  classlsd__slam_1_1_s_e3_tracker.tex  classlsd__slam_1_1_sim3_tracker.tex  classlsd__slam_1_1_slam_system.tex  classlsd__slam_1_1_timestamp.tex  classlsd__slam_1_1_trackable_key_frame_search.tex  classlsd__slam_1_1_tracking_reference.tex  classlsd__slam_1_1_undistorter.eps  classlsd__slam_1_1_undistorter.tex  classlsd__slam_1_1_undistorter_open_c_v.eps  classlsd__slam_1_1_undistorter_open_c_v.tex  classlsd__slam_1_1_undistorter_p_t_a_m.eps  classlsd__slam_1_1_undistorter_p_t_a_m.tex  classlsd__slam_1_1_vertex_sim3.eps  (+28 more)
